tests/data/bad/bad_inherit.py
from ntc import CN

from ..base_cfg import cfg

cfg = cfg.clone()

cfg.CLASSES.ANOTHER = CN()
